--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <div class="top-bar">
         <div class="user-meta">
-            <img id="head-img" src="">
+            <img id="head-img" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
             <div>
                 <span id="u-name-top" style="font-weight: 800; font-size: 15px;">Loading...</span><br>
                 <small id="u-id-top" style="font-weight: 800; font-size: 11px; color: var(--blue);">ID: 000000</small>
@@ -184,7 +184,7 @@
     <div id="p-profile" class="page">
         <div class="card-pro" style="text-align: center;">
             <div class="profile-pic-box">
-                <img id="u-img" src="">
+                <img id="u-img" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
             </div>
             <h2 id="u-name-val" style="margin: 5px 0; color: var(--dark); font-weight: 900; font-size: 26px;">...</h2>
             <div style="font-size: 40px; font-weight: 900; color: var(--blue);">৳ <span id="u-bal-val">0</span></div>
@@ -225,13 +225,16 @@
 
         const db = firebase.initializeApp({ databaseURL: "https://bachelor-point-season-5-default-rtdb.firebaseio.com/" }).database();
         const tg = window.Telegram.WebApp;
+        tg.ready();
         tg.expand();
 
+        // ইউজার ডাটা হ্যান্ডলিং
+        let tgUser = tg.initDataUnsafe?.user || { id: "000000", first_name: "User", photo_url: "" };
         let user = JSON.parse(localStorage.getItem('mr_v_ultimate_pro')) || {
             bal: 0, t1: false, t2: false, t3: false, t4: false, refs: 0, 
-            id: tg.initDataUnsafe.user?.id || "68493021",
-            name: (tg.initDataUnsafe.user?.first_name || "M R DEVELOPER"),
-            photo: tg.initDataUnsafe.user?.photo_url || "https://cdn-icons-png.flaticon.com/512/3135/3135715.png"
+            id: tgUser.id,
+            name: tgUser.first_name,
+            photo: tgUser.photo_url || "https://cdn-icons-png.flaticon.com/512/3135/3135715.png"
         };
 
         function setMethod(m) {
@@ -340,6 +343,4 @@
             const lock = localStorage.getItem('lock_' + id);
             if (lock && (Date.now() - lock < LOCK_TIME)) return toast("ভিডিওটি লক আছে!", "error");
             let adData = JSON.parse(localStorage.getItem('ad_p_final')) || { c: 0, d: new Date().toLocaleDateString() };
-            if (adData.d !== new Date().toLocaleDateString()) { adData.c = 0; adData.d = new Date().toLocaleDateString(); }
-            if (adData.c < AD_LIMIT) {
-                if (typeof show_10525370 === 'function') { show_10525370
+            if (adData.d !== new Date().toLocaleDateStrin
